# team9

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  EDITION-GUIDE.md  IM_USAGE_GUIDE.md  LICENSE  README.md  WORKSPACE_INVITE_SETUP.md  default  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  railway.toml  turbo.json
.github/workflows/: build-desktop.yml  ci-test.yml  contracts-freshness.yml  e2e-ahand.yml  main-pr-source-guard.yml
.husky/: pre-commit
.incident/2026-04-20-signup-abuse/: cleanup.mjs
apps/client/: .env.example  .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/client/scripts/: build-dmg.sh  generate-routes.mjs  vitest-run.mjs
apps/client/src/: global.css  main.tsx  sw.ts  test-setup.ts  vite-env.d.ts
apps/client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.local.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/scripts/: fix-dmg-icon.sh  set_icon.swift
apps/client/src-tauri/src/: ahand.rs  health_server.rs  lib.rs  main.rs
apps/client/src-tauri/src/ahand/: browser_runtime.rs  commands.rs  identity.rs  mod.rs  runtime.rs
apps/debugger/: CLAUDE.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/debugger/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
apps/server/: .dockerignore  .env-loader.mjs  .env.example  .gitignore  .swcrc  Dockerfile.gateway  Dockerfile.im-worker  QUICKSTART.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-websocket.html  tsconfig.json
contracts/: README.md  hub-control-plane.json  hub-webhook.json
docker/: Caddyfile.client  client.Dockerfile  docker-compose.yml  gateway.Dockerfile  im-worker.Dockerfile  task-tracker.Dockerfile  task-worker.Dockerfile  web.Dockerfile
docs/: tracker.md
docs/design/: taskcast-requirements.md  tasks-module-zh.md  tasks-module.md
docs/plans/: 2026-02-26-sentry-integration-design.md  2026-02-26-sentry-integration-plan.md  2026-02-27-agent-username-design.md  2026-02-28-message-list-scroll-improvements-design.md  2026-03-02-thread-panel-width-design.md  2026-03-04-grafana-observability-design.md  2026-03-04-grafana-observability-plan.md  2026-03-05-tasks-module-plan.md  2026-03-09-bot-startup-wait-step-design.md  2026-03-09-bot-startup-wait-step-plan.md  2026-03-09-resources-module-design.md  2026-03-09-resources-module-plan.md  2026-03-09-skills-module-design.md  2026-03-09-skills-module-implementation.md  2026-03-09-task-triggers-design.md  2026-03-09-task-triggers-plan.md  2026-03-10-task-document-editor-design.md  2026-03-10-task-document-editor-plan.md  2026-04-03-openclaw-to-app-plugin.md  notification-system-implementation.md
docs/prompts/: vercel-ai-openrouter-migration.md
docs/superpowers/plans/: 2026-03-13-taskcast-integration.md  2026-03-16-bot-debugger.md  2026-03-16-task-chat-panel-layout.md  2026-03-17-openclaw-task-execute.md  2026-03-17-task-hierarchy-redesign.md  2026-03-17-task-module-ui-redesign.md  2026-03-19-base-model-staff-team9.md  2026-03-19-task-system-foundation-fixes.md  2026-03-21-user-room-delivery.md  2026-03-23-http-streaming-endpoints.md  2026-03-23-turborepo-migration.md  2026-03-24-tracking-channel.md  2026-03-25-tracking-channel-v2.md  2026-03-26-tracking-channel-ui.md  2026-03-27-agent-event-rendering.md  2026-03-29-hive-bot-task-execution.md  2026-03-31-account-settings.md  2026-03-31-activity-readall-and-bot-notification-filter.md  2026-03-31-team9-auth-validation-endpoint.md  2026-03-31-workspace-settings.md  2026-04-01-team9-auth-validation-endpoint.md  2026-04-01-user-avatar-seeded-colors.md  2026-04-03-team9-hive-agent-metadata-sync.md  2026-04-04-common-staff-system.md  2026-04-04-common-staff-system.md.tasks.json  2026-04-04-team9-mobile-app.md  2026-04-04-team9-mobile-app.md.tasks.json  2026-04-05-channel-view-ui-logic-separation.md  2026-04-05-channel-view-ui-logic-separation.md.tasks.json  2026-04-05-vercel-ai-openrouter-migration.md  2026-04-05-vercel-ai-openrouter-migration.md.tasks.json  2026-04-07-folder9-implementation.md  2026-04-07-folder9-implementation.md.tasks.json  2026-04-07-personal-staff.md  2026-04-07-personal-staff.md.tasks.json  2026-04-07-task-to-routine-rename.md  2026-04-07-task-to-routine-rename.md.tasks.json  2026-04-08-auto-migrate-seed.md  2026-04-08-auto-migrate-seed.md.tasks.json  2026-04-09-intelligent-routine-creation.md  (+57 more)
docs/superpowers/reports/: 2026-04-22-stream-e-completion-report.md
docs/superpowers/reviews/: codex-pre-pr-review.md
docs/superpowers/specs/: 2026-03-11-replace-agent-browser-with-playwright-cli-design.md  2026-03-13-slack-style-auth-redesign.md  2026-03-13-taskcast-integration-design.md  2026-03-14-remove-pair-code-from-desktop-login.md  2026-03-16-bot-debugger-design.md  2026-03-17-openclaw-task-execute-design.md  2026-03-17-task-module-hierarchy-redesign.md  2026-03-17-task-module-ui-redesign.md  (+57 more)
docs/tracking-steps-ux/: IMPLEMENTATION.md
k6/: README.md  ahand-load-baseline.js
k6/scripts/: gen-webhook-payloads.mjs
patches/: eventsource-parser@3.0.6.patch
scripts/: fix-missing-openclaw-instances.ts  link-env.sh  seed-resources.mjs
(+2504 files in other folders)
